# kr_epi

./: .gitignore  kr-epi_deterministic_tour.ipynb  pyproject.toml  setup.py
docs/source/: analysis.rst  api_summary.rst  conf.py  forcing.rst  index.rst  introduction.rst  models.rst  stochastic.rst  sweeps.rst  utils.rst
docs/source/_autosummary/: kr_epi.analysis.equilibria.rst  kr_epi.analysis.rst  kr_epi.analysis.sensitivity.rst  kr_epi.analysis.spectra.rst  kr_epi.analysis.stability.rst  kr_epi.forcing.rst  kr_epi.forcing.sinusoid.rst  kr_epi.forcing.term_time.rst  kr_epi.forcing.term_time_smooth.rst  kr_epi.models.base.rst  kr_epi.models.ode.rst  kr_epi.models.ode_counts.rst  kr_epi.models.ode_counts_mortality.rst  kr_epi.models.reactions.rst  kr_epi.models.rst  kr_epi.stochastic.direct.rst  kr_epi.stochastic.rst  kr_epi.sweeps.rst  (+4 more)
kr_epi/: plotting.py
kr_epi/analysis/: __init__.py  equilibria.py  sensitivity.py  spectra.py  stability.py
kr_epi/forcing/: sinusoid.py  term_time.py  term_time_smooth.py
kr_epi/models/: base.py  ode.py  ode_counts.py  ode_counts_mortality.py  reactions.py
kr_epi/stochastic/: __init__.py  direct.py  tau_leap.py
kr_epi/sweeps/: parameter_sweep.py  runners.py
kr_epi/utils/: params.py
kr_epi/validation/: model_validator.py
tests/: test1.py  test2.py  test3.py  test4.py  test5.py  test6.py  test_basic_models.py  test_comprehensive_validation.py  test_conservation_consistency.py  test_counts_models.py  test_equilibria_basic.py  test_forcing_counts.py  test_gillespie_direct.py  test_model_validator.py  test_morality_counts.py
