[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kr-epi"
version = "0.1.0"
description = "Keeling & Rohani–faithful epidemiology toolkit"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "You" }]
dependencies = [
  "numpy>=1.22",
  "scipy>=1.9",
  "matplotlib>=3.6",
  "pandas>=1.5"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "black>=24.3",
  "ruff>=0.5.0",
  "mypy>=1.7"
]

[tool.setuptools.packages.find]
include = ["kr_epi*"]
